--- a/mobile/src/main/res/values/strings.xml
+++ b/mobile/src/main/res/values/strings.xml
@@ -1,4 +1,8 @@
 <resources>
     <string name="app_name">Warehouse Helper</string>
     <string name="action_settings">Settings</string>
+
+
+    <string name="drawer_item_home">Home</string>
+    <string name="drawer_item_settings">Settings</string>
 </resources>
