--- a/mobile/src/main/res/values/strings.xml
+++ b/mobile/src/main/res/values/strings.xml
@@ -5,4 +5,8 @@
 
     <string name="drawer_item_home">Home</string>
     <string name="drawer_item_settings">Settings</string>
+    <string name="default_text">Default</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
