--- a/mobile/src/main/res/values/strings.xml
+++ b/mobile/src/main/res/values/strings.xml
@@ -6,7 +6,6 @@
     <string name="drawer_item_home">Home</string>
     <string name="drawer_item_settings">Settings</string>
     <string name="default_text">Default</string>
+    <string name="default_text_2">Main Screen</string>
 
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
