--- a/mobile/src/main/res/values/strings.xml
+++ b/mobile/src/main/res/values/strings.xml
@@ -8,6 +8,7 @@
     <string name="draw_item_camera">Camera</string>
     <string name="draw_item_web">Web site</string>
     <string name="draw_item_email">Email</string>
+    <string name="draw_item_settings">Settings</string>
     <string name="default_text">Default</string>
     <string name="default_text_2">Main Screen</string>
 
