--- a/mobile/src/main/res/values/strings.xml
+++ b/mobile/src/main/res/values/strings.xml
@@ -33,5 +33,11 @@
     <string name="backup_planners">Bckup Planner :</string>
     <string name="backup_number">Backup Number :</string>
     <string name="number_of_parts">Number Of Parts :</string>
+    <string name="delete">Delete</string>
+    <string name="update">Update</string>
+    <string name="add">Add</string>
+    <string name="message_txt_box">Message</string>
+    <string name="action_txt_box">Action</string>
+    <string name="title_txt_box">Title</string>
 
 </resources>
